--- a/Readme.html
+++ b/Readme.html
@@ -44,7 +44,7 @@
 <h1><a name="general"></a>General Notes</h1>
 <p>Remote Master (aka RM) was originally designed and developed primarily by Greg Bush, with significant contributions from John S Fine, Nils Ekberg, and others.</p>
 <p>RM is a Java application.  That means that in order to run RM, you must have either the Java Developer Kit or
-the Java Runtime Environemt installed, version 1.4.1 or later.  Either of these can be downloaded from the <a href="http://java.sun.com/j2se/downloads/index.html">J2SE Downloads</a> page.</p>
+the Java Runtime Environemt installed, version 5.0 or later.  Either of these can be downloaded from the <a href="http://java.sun.com/javase/downloads/index.jsp">J2SE Downloads</a> page.</p>
 <p>The Remote Master user interface makes extensive use of context menus. On most platforms, context menus are accessed by clicking the right mouse button in an area when you want to do something.  RemoteMaster also often provides multiple ways to accomplish the same task.</p>
 <p>Take, for example, the Layout panel, which shows an image of the remote being used on the left, and a list of the available functions on the right.  There are 3 different ways to assign a function to a button:
 <ol>
@@ -54,7 +54,7 @@ the Java Runtime Environemt installed, version 1.4.1 or later.  Either of these 
 </ol>
 <h1><a name="start"></a>Getting Started</h1>
 <ol>
-<li>If you haven't already, download and install Java, version 1.4.1 or later.  You can download it from the <a href="http://java.sun.com/j2se/downloads/index.html">J2SE Download</a> page.  Either the Java Developer Kit (JDK) or the Java Runtime Environment (JRE) will do.</li>
+<li>If you haven't already, download and install Java version 5.0 or later.  You can download it from the <a href="http://java.sun.com/javase/downloads/index.jsp">J2SE Download</a> page.  Either the Java Developer Kit (JDK) or the Java Runtime Environment (JRE) will do.</li>
 <li>Download the latest version of Remote Master from <a href="https://sourceforge.net/project/showfiles.php?group_id=30560&package_id=22596">SourceForge</a>, and unzip it to the directory of your choice, preserving directory names.</li>
 <li>If you are using a version of Windows (95/98/NT/XP), double-click on the <b><tt>Setup.bat</tt></b> and then click <b>Yes</b>.</li>
 <li>If you haven't already, download the lastest version of the Remote Definition Files (RDFs) from the 
@@ -69,6 +69,7 @@ the Java Runtime Environemt installed, version 1.4.1 or later.  Either of these 
 <li>Double-click on <b><tt>rmaster.bat</tt></b>.</li>
 <li>Double-click on a Remote Master Device Upgrade file (*.rmdu).</li>
 <li>In Internet Explorer, click on a link to a Remote Master Device Upgade file (*.rmdu).</li>
+<li>From the command line, type<br><tt>java -jar &lt;path&gt;\RemoteMaster.jar -h &lt;path&gt;</tt><br> where &lt;path&gt; is the fully qualified path to the directory in which you installed Remote Master.</li>
 </ol>
 <p>There is a short tutorial available for RM.  See <a href="http://www.hifi-remote.com/jp1/help/rm.shtml">JP1 - Just How Easy Is It?</url>
 <h1><a name="main"></a>Using Remote Master</h1>
