*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@627 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -444,7 +444,7 @@ This column  is only shown for this remotes that support it, and it may have a d
 <li>Drag-n-drop a function onto the desired cell.</li>
 <li>Highlight the cell where you want to assing a function by clicking on it, then
 double-click the function you want to assign to it.</li>
-<li>Use the [b]Delete[/b] key or the [b]Remove[/b] button to remove the an assigned function from a button.</li>
+<li>Use the <b>Delete</b> key or the <b>Remove</b> button to remove the an assigned function from a button.</li>
 </ol>
 <div class="noshow">
 At the top of the [Buttons] sheet (cell G2) is an unlabeled check
@@ -600,7 +600,7 @@ then click the desired function in the context menu.</li>
 <li>Drag-n-drop a function onto the desired cell.</li>
 <li>Highlight the cell where you want to assing a function by clicking on it, then
 double-click the function you want to assign to it.</li>
-<li>Use the [b]Delete[/b] key or the [b]Remove[/b] button to remove the an assigned function from a button.</li>
+<li>Use the <b>Delete</b> key or the <b>Remove</b> button to remove the an assigned function from a button.</li>
 </ol>
 
 <h2><a name="keymap"></a>The Key Map Panel</h2>
