--- a/Readme.html
+++ b/Readme.html
@@ -61,7 +61,9 @@ the Java Runtime Environemt installed, version 6.0 or later.  Either of these ca
 <p>Unzip it, which will place all the images and maps in the <b>Images</b> sub-folder.</li>
 <li>If you haven't already, download the lastest version of the Remote Definition Files (RDFs) from the 
 <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=81">Main</a> <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=7">Tools</a> section of the <a href="http://www.hifi-remote.com/forums/dload.php">File Section</a> of the <a href=http://www.hifi-remote.com/forums/>JP1 Remotes Forums</a>
-<p>Unzip it to the directory of your choice.  It is recommended that you do <b>NOT</b> place it in the same directory as you placed Remote Master.</li>
+<p>Unzip it to the directory of your choice.  It is recommended that you do <b>NOT</b> place it in the same directory as you placed Remote Master.</p>
+<p><b><u>Note:</u></b> You must have RDFs for all supported remotes in order for RM to work correctly when importing or loading device upgrades that were created for remotes other than the one(s) you will be using.</p>
+</li>
 </ol>
 <p>That's it, Remote Master is now ready for your use!  There are a few different ways to start Remote Master:
 <ol>
@@ -394,11 +396,11 @@ be bound properly with earlier versions.</p>
 Setup Code. For example, if you're creating an upgrade for
 TV/1000 and need a function or two from VCR/2000, you can specify
 the function parameters on the External Functions panel.<p>
-<p>Other than the differnce in the data required to define an external function,
+<p>Other than the difference in the data required to define an external function,
 the External Function panel is used in exactly the same way as the Functions panel.
 Refer to the <a href="#functions">Functions Panel</a> for more information.</p>
 <p>You can also import functions from an RM or KM device upgrade file.  Use the <b>Import</b> button or the <b>Import</b>
-item on the context menu.</p>
+item on the context menu.  Note that the imported functions will only work if the source device upgrade is either <ul><li>a builtin setup code<li>installed in your remote.</ul></p>
 <table>
   <tr>
     <th>Name</th>
