--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -2,7 +2,7 @@
 <HEAD>
 <TITLE>JP1 - Just How Easy Is It?</TITLE>
 	
-<BODY text=#000000 vlink=#666666 alink=#996600 link=#3366cc bgcolor=#ffffff 
+<BODY text="#000000" vlink="#666666" alink="#996600" link="#3366cc" bgcolor="#ffffff" 
 background="img/bg.jpg">
 
 <font face="Times New Roman, Arial, Helvetica">
@@ -42,7 +42,7 @@ background="img/bg.jpg">
   <P>
   <H3><A name=3>3. What Equipment Do I Need?</A></H3>Well, for starters, you 
   need a JP1 compatible remote, these are remotes made by UEI. The two main 
-  brands that you will find in the stores are ‘One For All' and ‘Radio Shack', 
+  brands that you will find in the stores are ï¿½One For All' and ï¿½Radio Shack', 
   but there are several other remotes out there that are also JP1 compatible. To 
   see if your remote is JP1 compatible, open up the battery compartment and see 
   if there's a 6-pin conenctor in there (like the one below). If you see 6 holes 
@@ -87,10 +87,10 @@ background="img/bg.jpg">
   same directory as IR.exe, or better yet, you should store in your Windows / 
   System directory as it is used by several other JP1 programs. 
   <P>I am going to show some screen shots of the IR program, if you want to walk 
-  along with these, you can open the file ‘FromRob.txt' that's included in the 
+  along with these, you can open the file ï¿½FromRob.txt' that's included in the 
   IR zip file. 
   <P>First things first, start up the IR program and, with your remote connected 
-  to the JP1 cable, click on the ‘Download From Remote' button. You should see a 
+  to the JP1 cable, click on the ï¿½Download From Remote' button. You should see a 
   screen somewhat like that shown in Image 4.1. 
   <P>You'll notice that the IR program is deviced into several tabs. The actual 
   tabs displayed will vary by remote, for example, if your remote doesn't have 
@@ -266,14 +266,14 @@ background="img/bg.jpg">
   have assigned the functions to the buttons of your choice, you are ready to 
   load your upgrade. To do this, go back to the Output panel, shown in Image 
   5.8. The block of code circled in green is your device upgrade, click on 
-  <B>Copy</B> above and to the right to ‘copy' the code to the clipboard.</P>
-  <P><B>Note:</B> You can also ‘copy' the code by right-clicking on it, and 
-  selecting ‘Copy' from the pop-up menu.</B> 
+  <B>Copy</B> above and to the right to ï¿½copy' the code to the clipboard.</P>
+  <P><B>Note:</B> You can also ï¿½copy' the code by right-clicking on it, and 
+  selecting ï¿½Copy' from the pop-up menu.</B> 
   <P align=center><IMG 
   src="img/rm-output.jpg"><BR><B>Image 
   5.8 - RM's Output Panel</B></P>
   <P>Back in IR.exe you will need to select the "Devices" tab, as shown in Image 
-  5.9. This is one of the tabs that we skipped over earlier. Press the ‘Add' 
+  5.9. This is one of the tabs that we skipped over earlier. Press the ï¿½Add' 
   button and paste the code that you copied into the pop-up window. 
   <P align=center><IMG 
   src="img/image007.jpg"><BR><B>Image 
@@ -286,7 +286,7 @@ background="img/bg.jpg">
   Image 5.8) you will also need to copy this over to IR. You can use the 
   <B>Copy</B> above and to the right or you use the copy function in the pop-up 
   context menu. Then in IR you will need to go to the Protocols tab, as shown in 
-  Image 5.10. Click the ‘Add' button and then paste the protocol code into the 
+  Image 5.10. Click the ï¿½Add' button and then paste the protocol code into the 
   pop-up window. The Protocol Id field will be populated automatically. 
   <P>Don't forget to assign the new setup code that you created to an actual 
   device button!</P>
@@ -333,7 +333,7 @@ background="img/bg.jpg">
   displayed the IR info. This signal uses the NECx2 protocol, with a device code 
   of 5 and a sub-device code also of 5. Chances are, all of the buttons for this 
   device with use the same protocol and device codes, what will change for each 
-  button are the OBC and EFC codes. Just FYI, this is the ‘record' button for a 
+  button are the OBC and EFC codes. Just FYI, this is the ï¿½record' button for a 
   Samsung VCR, which responds to the VCR/0240 setup code. 
   <P>To start creating an upgrade for this device, you should fire up 
   RemoteMaster. Then in the Setup tab, you should make the entries described in 
