Fix Setup.vbs for users that don't have Admin privileges Add support for opening Sling Learned XML files
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@897 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -1,5 +1,5 @@
 <!-- Quirk on -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
 <title>Using Remote Master</title>
@@ -55,7 +55,6 @@ the Java Runtime Environment (JRE) installed, version 6.0 or later.  Either of t
 <ol>
 <li>If you haven't already, download and install Java version 6.0 or later.  You can download it from the <a href="http://java.sun.com/javase/downloads/index.jsp">J2SE Download</a> page.  Either the Java Developer Kit (JDK) or the Java Runtime Environment (JRE) will do.</li>
 <li>Download the latest version of Remote Master from <a href="https://sourceforge.net/project/showfiles.php?group_id=30560&package_id=22596">SourceForge</a>, and unzip it to the directory of your choice, preserving directory names.</li>
-<li>If you are using a version of Windows (95/98/NT/XP/Vista/Windows 7), double-click on <b>Setup.vbs</b>.</li>
 <li>Download the latest version of the <a href="http://www.hifi-remote.com/forums/dload.php?action=file&file_id=6160">Maps and Images required for RM</a> from the <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=81">Main</a> <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=7">Tools</a> section of the <a href="http://www.hifi-remote.com/forums/dload.php">File Section</a> of the <a href=http://www.hifi-remote.com/forums/>JP1 Remotes Forums</a>. 
 <p>Unzip it to the folder of your choice, creating a <b>maps</b> sub-folder containing all the maps and images.</li>
 <li>If you haven't already, download the lastest version of the <a href="http://www.hifi-remote.com/forums/dload.php?action=file&file_id=5338">RDF files needed for IR and RM</a> from the 
@@ -63,14 +62,14 @@ the Java Runtime Environment (JRE) installed, version 6.0 or later.  Either of t
 <p>Unzip it to the folder of your choice.  It is recommended that you do <b>NOT</b> place it in the same directory as you placed Remote Master.</p>
 <p><b><u>Note:</u></b> You must have RDFs for all supported remotes in order for RM to work correctly when importing or loading device upgrades that were created for remotes other than the one(s) you will be using.</p>
 </li>
+<li>If you are using a version of Windows (95/98/NT/XP/Vista/Windows 7), double-click on <b>Setup.vbs</b>.  
+<p>This will create shortcuts in Start > Programs > Remote Master for your use.  Feel free to send them to you Desktop or copy them to your Quick Launch toolbar.  File associations are also created for .rmdu and .rmir file, so you can just double-click on them directly.</p></li>
 </ol>
 <p>That's it, Remote Master is now ready for your use!  There are a few different ways to start Remote Master:
 <ol>
-<li>Click on the <b>Remote Master</b> shortcut in <b><tt>Start &gt; All Programs &gt; Remote Master</tt></b>.  You may want to send it to your desktop or drag it to your Quick Launch tool bar.</li>
-<li>Double-click on <b>RemoteMaster.jar</b>.</li>
-<li>Double-click on a Remote Master Device Upgrade file (*.rmdu).</li>
-<li>In Internet Explorer, click on a link to a Remote Master Device Upgade file (*.rmdu).</li>
-<li>From the command line, type<br><tt>java -jar &lt;path&gt;\RemoteMaster.jar -h &lt;path&gt;</tt><br> where &lt;path&gt; is the fully qualified path of the folder in which you installed Remote Master.</li>
+<li>Click on the <b>Remote Master</b> or <b>RMIR</b> shortcut in <b><tt>Start &gt; All Programs &gt; Remote Master</tt></b><p>Non-windows users should use the rmaster.sh and rmir.sh scripts.</p></po></li>
+<li>Double-click on a .rmdu or .rmir file.</li>
+<li>In your browser, click on a link to a *.rmdu or *.rmir file.</li>
 </ol>
 <p>There is a short tutorial available for RM.  See <a href="http://www.hifi-remote.com/jp1/help/rm.shtml">JP1 - Just How Easy Is It?</url>
 <h1><a name="main"></a>Using Remote Master</h1>
