Add Graham to contributor list in Readme and About screens
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@898 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -41,7 +41,7 @@
 </div>
 <div class="content">
 <h1><a name="general"></a>General Notes</h1>
-<p>Remote Master (aka RM) was originally designed and developed primarily by Greg Bush, with significant contributions from John S Fine, Nils Ekberg, and others.</p>
+<p>Remote Master (aka RM) was originally designed and developed primarily by Greg Bush, with significant contributions from John S Fine, Nils Ekberg, Graham Dixon (mathdon) and others.</p>
 <p>RM is a Java application.  That means that in order to run RM, you must have either the Java Developer Kit (JDK) or
 the Java Runtime Environment (JRE) installed, version 6.0 or later.  Either of these can be downloaded for free from the <a href="http://java.sun.com/javase/downloads/index.jsp">J2SE Downloads</a> page.</p>
 <p>The Remote Master user interface makes extensive use of context menus. Context menus are accessed by clicking the right mouse button in an area when you want to do something.  RemoteMaster also often provides multiple ways to accomplish the same task.</p>
