- Bugfixes for the XSight Touch/Color. (Graham) - Fixed minor issues with Readme.html and Setup.vbs pointed out in the forums by CyberSimian (aka Clive Chapman).
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1205 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/Readme.html
+++ b/Readme.html
@@ -53,11 +53,11 @@ the Java Runtime Environment (JRE) installed, version 6.0 or later.  Either of t
 </ol>
 <h1><a name="start"></a>Getting Started</h1>
 <ol>
-<li>If you haven't already, download and install Java version 6.0 or later.  You can download it from the <a href="http://java.sun.com/javase/downloads/index.jsp">J2SE Download</a> page.  Either the Java Developer Kit (JDK) or the Java Runtime Environment (JRE) will do.</li>
-<li>Download the latest version of Remote Master from <a href="https://sourceforge.net/project/showfiles.php?group_id=30560&package_id=22596">SourceForge</a>, and unzip it to the directory of your choice, preserving directory names.</li>
+<li><If you haven't already, download and install Java version 6.0 or later.  You can download it from the <a href="http://java.sun.com/javase/downloads/index.jsp">J2SE Download</a> page.  Either the Java Developer Kit (JDK) or the Java Runtime Environment (JRE) will do.<br>&nbsp;</li>
+<li>Download the latest version of Remote Master from <a href="https://sourceforge.net/project/showfiles.php?group_id=30560&package_id=22596">SourceForge</a>, and unzip it to the directory of your choice, preserving directory names.<br>&nbsp;</li>
 <li>Download the latest version of the <a href="http://www.hifi-remote.com/forums/dload.php?action=file&file_id=6160">Maps and Images required for RM</a> from the <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=81">Main</a> <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=7">Tools</a> section of the <a href="http://www.hifi-remote.com/forums/dload.php">File Section</a> of the <a href=http://www.hifi-remote.com/forums/>JP1 Remotes Forums</a>. 
 <p>Unzip it to the folder of your choice, creating a <b>maps</b> sub-folder containing all the maps and images.</li>
-<li>If you haven't already, download the lastest version of the <a href="http://www.hifi-remote.com/forums/dload.php?action=file&file_id=5338">RDF files needed for IR and RM</a> from the 
+<li>If you haven't already, download the latest version of the <a href="http://www.hifi-remote.com/forums/dload.php?action=file&file_id=5338">RDF files needed for IR and RM</a> from the 
 <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=81">Main</a> <a href="http://www.hifi-remote.com/forums/dload.php?action=category&cat_id=7">Tools</a> section of the <a href="http://www.hifi-remote.com/forums/dload.php">File Section</a> of the <a href=http://www.hifi-remote.com/forums/>JP1 Remotes Forums</a>
 <p>Unzip it to the folder of your choice.  It is recommended that you do <b>NOT</b> place it in the same directory as you placed Remote Master.</p>
 <p><b><u>Note:</u></b> You must have RDFs for all supported remotes in order for RM to work correctly when importing or loading device upgrades that were created for remotes other than the one(s) you will be using.</p>
@@ -68,7 +68,7 @@ the Java Runtime Environment (JRE) installed, version 6.0 or later.  Either of t
 <p>That's it, Remote Master is now ready for your use!  There are a few different ways to start Remote Master:
 <ol>
 <li>Click on the <b>Remote Master</b> or <b>RMIR</b> shortcut in <b><tt>Start &gt; All Programs &gt; Remote Master</tt></b><p>Non-windows users should use the rmaster.sh and rmir.sh scripts.</p></po></li>
-<li>Double-click on a .rmdu or .rmir file.</li>
+<li>Double-click on a .rmdu or .rmir file.<br>&nbsp;</li>
 <li>In your browser, click on a link to a *.rmdu or *.rmir file.</li>
 </ol>
 <p>There is a short tutorial available for RM.  See <a href="http://www.hifi-remote.com/jp1/help/rm.shtml">JP1 - Just How Easy Is It?</url>
@@ -91,7 +91,7 @@ KeymapMaster Device Upgrade file (*.txt), change the <b>Files of type:</b> field
 </tr>
 <tr>
 <th>Save</th>
-<td>This menu will save the device upgrade to a file.  This item will be diabled unless a RemoteMaster Device Upgrade file was loaded, or the "Save as..." item has been used.</td>
+<td>This menu will save the device upgrade to a file.  This item will be disabled unless a RemoteMaster Device Upgrade file was loaded, or the "Save as..." item has been used.</td>
 </tr>
 <tr>
 <th>Save&nbsp;as...</th>
@@ -122,7 +122,7 @@ KeymapMaster Device Upgrade file (*.txt), change the <b>Files of type:</b> field
 <table>
 <tr>
 <th>Look&nbsp;and&nbsp;Feel</th>
-<td>Allows you to select the over all look and feel used by RemoteMaster.  Most Windows users will want to use the <b>Windows</b> Look and Feel, but I recommend the <b>Metal</b> Look and Feel.  The reason for this is simple:  the <b>Windows</b> Look and Feel does not highlight
+<td>Allows you to select the overall look and feel used by RemoteMaster.  Most Windows users will want to use the <b>Windows</b> Look and Feel, but I recommend the <b>Metal</b> Look and Feel.  The reason for this is simple:  the <b>Windows</b> Look and Feel does not highlight
 the current cell in the Functions panel.
 </td>
 </tr>
@@ -135,7 +135,7 @@ the current cell in the Functions panel.
 <table>
 <tr>
 <th><u>A</u>lways</th>
-<td>Whenever an action you perform might cause you to lose the contents of the Device Ugrade.</td>
+<td>Whenever an action you perform might cause you to lose the contents of the Device Upgrade.</td>
 </tr>
 <tr>
 <th>On&nbsp;E<u>x</u>it</th>
@@ -321,7 +321,7 @@ desired values for the protocol parameters, then press the OK button
 </ol>
 <p>Then, go to the Functions sheet and enter the EFC's (EFC-style
 Button Codes MUST be used) for all of the various functions. In
-the "Cominer Device" column, select the entry corresponding to the
+the "Combiner Device" column, select the entry corresponding to the
 protocol and parameters entered above.</p>
 <p>To enable Duration Control for the
 function, select the duration multiple to be used in the "Duration" column
@@ -351,7 +351,7 @@ function, select the duration multiple to be used in the "Duration" column
 </tr>
 <tr>
 <th>Hex</th>
-<td>Enter the raw hex for the command, as groups of 2 hex digits separated by spaces. For examaple "0C A9".  You usually won't edit this field, you will let RM compute the value based on information entered in the other columns.
+<td>Enter the raw hex for the command, as groups of 2 hex digits separated by spaces. For example "0C A9".  You usually won't edit this field, you will let RM compute the value based on information entered in the other columns.
 </tr>
 <tr>
 <th>Description</th>
@@ -367,7 +367,7 @@ by using the context menu.  Just right click where you want to add the new funct
 </tr>
 <tr>
 <th>Delete</th>
-<td>Delete the currently selected function(s).  Functions that have been assigned to buttons cannot be deleted.  You can select multile functions. This can also be accomplished using the context menu.  Simply right-click on the function you want to delete and select <b>Delete</b>.  If the function you right-clicked on is one of many selected functions, all the functions will be deleted.</td>
+<td>Delete the currently selected function(s).  Functions that have been assigned to buttons cannot be deleted.  You can select multiple functions. This can also be accomplished using the context menu.  Simply right-click on the function you want to delete and select <b>Delete</b>.  If the function you right-clicked on is one of many selected functions, all the functions will be deleted.</td>
 </tr>
 <tr>
 <th>Move&nbsp;up</th>
@@ -398,7 +398,7 @@ the function parameters on the External Functions panel.<p>
 the External Function panel is used in exactly the same way as the Functions panel.
 Refer to the <a href="#functions">Functions Panel</a> for more information.</p>
 <p>You can also import functions from an RM or KM device upgrade file.  Use the <b>Import</b> button or the <b>Import</b>
-item on the context menu.  Note that the imported functions will only work if the source device upgrade is either <ul><li>a builtin setup code<li>installed in your remote.</ul></p>
+item on the context menu.  Note that the imported functions will only work if the source device upgrade is either <ul><li>a built-in setup code<li>installed in your remote.</ul></p>
 <table>
   <tr>
     <th>Name</th>
@@ -602,7 +602,7 @@ instead of presenting the buttons in a table, the Layout panel presents
 them visually, using an image of the selected remote.  Rather than indicate
 the buttons that are <b>NOT</b> in the keymap for the current device type using
 an asterisk, the
-Layout panel shows you than buttons that <b>ARE</b> in the keymap by outlining
+Layout panel shows you the buttons that <b>ARE</b> in the keymap by outlining
 them in orange.  Since there aren't multiple physical buttons to represent the
 shift states of the buttons, you choose the shift state by selecting one of the
 <b>Mode</b> radio buttons.</p>
@@ -622,7 +622,7 @@ by name.  Buttons that already have functions assigned will not get reassigned.<
 <li>Use the context menu (right-click) in a cell where you want to assign a function,
 then click the desired function in the context menu.</li>
 <li>Drag-n-drop a function onto the desired cell.</li>
-<li>Highlight the cell where you want to assing a function by clicking on it, then
+<li>Highlight the cell where you want to assign a function by clicking on it, then
 double-click the function you want to assign to it.</li>
 <li>Use the <b>Delete</b> key or the <b>Remove</b> button to remove the an assigned function from a button.</li>
 </ol>
